--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "devDependencies": {
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.5.2",
+    "gulp-uglifyjs": "^0.6.2",
     "lodash": "^4.6.1"
   }
 }
