wordpress, rails, refs ani

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,11 @@ sass:
   style: compressed
 gems:
   - octopress-autoprefixer
-exclude: [node_modules, gulpfile.js, bower_components, Gemfile, Gemfile.lock, package.json, js/scripts.js]
+exclude: [node_modules, gulpfile.js, bower_components, Gemfile, Gemfile.lock, package.json, js/scripts.js, js/AnimOnScroll.js, js/classie.js, js/modernizr.js]
 collections:
   - html_tools_frameworks
+  - wordpress_tools_frameworks
+  - rails_tools_frameworks
   - education_career
   - skills_languages
   - references
