--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sass:
   style: compressed
 gems:
   - octopress-autoprefixer
-exclude: [node_modules, gulpfile.js, bower_components, Gemfile, Gemfile.lock, package.json, _javascript]
+exclude: [node_modules, gulpfile.js, bower_components, Gemfile, Gemfile.lock, package.json, _javascript, _css]
 collections:
   - html_tools_frameworks
   - wordpress_tools_frameworks
