--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: florianweich.me
+title: Florian Weich | Designer & Entwickler
 email: hallo@florianweich.me
-description: Florian Weich. Designer. Webentwickler. Programmierer
+description: Apple Developer, Frontend- und Backend-Entwickler & Webdesigner aus Leidenschaft. Ich spreche HTML, SCSS, JavaScript, SQL, Ruby, Swift und mehr
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://florianweich.me" # the base hostname & protocol for your site
 google_analytics: "UA-327847-19"
