Added contact form submission via AJAX and local PHP script

--- a/bower.json
+++ b/bower.json
@@ -23,13 +23,13 @@
     "devicons": "^1.8.0",
     "font-awesome": "^4.7.0",
     "animate.css": "^3.5.2",
-    "featherlight": "^1.7.13",
     "jquery": "^3.3.1",
-    "masonry-layout": "masonry#^4.2.1",
+    "featherlight": "^1.7.13",
     "imagesloaded": "^4.1.4",
     "isMobile": "^0.4.1",
     "parsleyjs": "^2.8.1",
     "retina.js": "^2.1.2",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "masonry-layout": "^4.2.1"
   }
 }
