--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sass:
   style: compressed
 plugins:
   - octopress-autoprefixer
-exclude: [node_modules, gulpfile.js, bower_components, Gemfile, Gemfile.lock, package.json, package-lock.json, bower.json, _javascript, _css]
+exclude: [node_modules, gulpfile.js, bower_components, Gemfile, Gemfile.lock, package.json, package-lock.json, bower.json, _javascript, _css, yarn.lock]
 collections:
   - html_tools_frameworks
   - wordpress_tools_frameworks
