--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lodash": "^4.6.1"
   },
   "dependencies": {
-    "devicons": "^1.8.0"
+    "bower": "^1.8.4",
+    "devicons": "^1.8.0",
+    "global": "^4.3.2"
   }
 }
